java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/HighlightInsufficientLevel.java
<error descr="Implicitly declared classes are not supported at language level '20'">void foo() {

}</error>

<error descr="Implicitly declared classes are not supported at language level '20'">String s = "asd";</error>

<error descr="Implicitly declared classes are not supported at language level '20'">static {

}</error>

class A {

}